--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<mat-sidenav-container>
-    <mat-sidenav [(opened)]="openend">
+<mat-toolbar color="primary" class="nav mat-display-2" routerLinkActive="active">
+    <a class="title" routerLink="/">{{ title | uppercase }}</a>
+
+    <mat-nav-list class="nav">
         <a mat-list-item class="page" routerLinkActive="active" routerLink="/">
             <mat-icon>home</mat-icon>
         </a>
@@ -7,24 +9,10 @@
         <a mat-list-item class="page" routerLinkActive="active" routerLink="/news">News</a>
         <a mat-list-item class="page" routerLinkActive="active" routerLink="/pages">Pages</a>
         <a mat-list-item class="page" routerLinkActive="active" routerLink="/new-news">New News</a>
-    </mat-sidenav>
-    <mat-sidenav-container>
+        <a mat-list-item class="page" routerLinkActive="active" routerLink="/authorization">
+            <mat-icon>account_circle</mat-icon>
+        </a>
+    </mat-nav-list>
+</mat-toolbar>
 
-        <mat-toolbar color="primary" class="nav mat-display-2" routerLinkActive="active">
-            <a class="title" routerLink="/">{{ title | uppercase }}</a>
-
-            <mat-nav-list class="nav">
-                <a mat-list-item class="page" routerLinkActive="active" routerLink="/">
-                    <mat-icon>home</mat-icon>
-                </a>
-                <a mat-list-item class="page" routerLinkActive="active" routerLink="/about">About us</a>
-                <a mat-list-item class="page" routerLinkActive="active" routerLink="/news">News</a>
-                <a mat-list-item class="page" routerLinkActive="active" routerLink="/pages">Pages</a>
-                <a mat-list-item class="page" routerLinkActive="active" routerLink="/new-news">New News</a>
-            </mat-nav-list>
-        </mat-toolbar>
-
-        <button mat-raised-button (click)="openend=!openend">Toggle Opened</button>
-        <router-outlet></router-outlet>
-    </mat-sidenav-container>
-</mat-sidenav-container>
+<router-outlet></router-outlet>
