--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,15 @@
 <h2 class="title">Home</h2>
 
-<p>{{ new | date }}</p>
+<div class="card">
+    <div class="card-body">
+        <p>You're logged in with Angular 14 &amp; JWT!!</p>
+        <!-- <p>Your role is: <strong>{{user.role}}</strong>.</p> -->
+        <p>This page can be accessed by <u>all authenticated users</u>.</p>
+        <p class="mb-1">Current user from secure api end point:</p>
+        <!-- <div *ngIf="loading" class="spinner-border spinner-border-sm"></div>
+        <ul *ngIf="userFromApi">
+            <li>{{userFromApi.firstName}} {{userFromApi.lastName}}</li>
+        </ul> -->
+        <p>{{ new | date }}</p>
+    </div>
+</div>
