--- a/src/app/newsitem/newsitem.component.html
+++ b/src/app/newsitem/newsitem.component.html
@@ -1,14 +1,26 @@
 <mat-card class="news-item">
-    <mat-card-header>
-        <mat-card-title class="news-name">{{ item.title }}</mat-card-title>
-        <mat-card-subtitle></mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content ng-controller="myAppCtrl">
-        <div *ngIf="!showNews"> {{ item.short }}</div>
-        <div *ngIf="showNews">{{ item.full }}</div>
-    </mat-card-content>
-    <mat-card-actions align="end">
-        <button mat-button (click)="showNewsItem()"><a class="news-link">Read more...</a></button>
-        <button mat-button (click)="deleteNews(item)">Delete News</button>
-    </mat-card-actions>
+    <div class="content-wrap">
+        <mat-card-content ng-controller="myAppCtrl" class="img-wraper">
+            <img mat-card-image *ngIf="item.imgUrl" class="imageNews" src="{{ item.imgUrl }}" alt="img">
+        </mat-card-content>
+        <div class="info-wrapper">
+            <mat-card-header>
+                <mat-card-title class="news-name">{{ item.title }}</mat-card-title>
+                <mat-card-subtitle></mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content ng-controller="myAppCtrl">
+                <div [title]="item.full">{{ news }}</div>
+            </mat-card-content>
+            <mat-card-actions>
+                <button *ngIf="unnecessaryBtn()" mat-button (click)="toggleFull()"><a class="news-link">{{ btnName
+                        }}</a></button>
+            </mat-card-actions>
+        </div>
+    </div>
+
+
+    <div class="button-wrapper">
+        <mat-icon class="btn-hide" (click)="deleteNews(item)">delete</mat-icon>
+        <mat-icon class="btn-hide" (click)="onEditNews(item)">edit</mat-icon>
+    </div>
 </mat-card>
