--- a/src/app/newsitem/newsitem.component.scss
+++ b/src/app/newsitem/newsitem.component.scss
@@ -6,10 +6,23 @@
 .news-item {
     margin: 0.5rem 3rem;
     padding: 1rem;
+    min-width: 30rem;
     list-style-type: none;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    position: relative;
+
+    .button-wrapper {
+        position: absolute;
+        right: 1rem;
+        top: 1rem;
+        visibility: hidden;
+    }
+
+    &:hover .button-wrapper {
+        visibility: visible;
+    }
 }
 
 .news-name {
@@ -23,6 +36,30 @@
 .btn-delete {
     padding: 0.5rem 1.5rem;
     margin-left: 3rem;
+}
 
+.btn-hide {
+    cursor: pointer;
+    margin-right: 1rem;
+}
+
+.content-wrap {
+    display: flex;
+    flex-direction: row;
+}
+
+.img-wraper {
+    height: auto;
+    width: 10rem;
+}
+
+.imageNews {
+    width: 10rem;
+    height: auto;
+    object-fit: contain;
+}
+
+.info-wrapper {
+    margin-left: 1rem;
 
 }
