--- a/src/app/admin/new-news/new-news.component.html
+++ b/src/app/admin/new-news/new-news.component.html
@@ -7,24 +7,22 @@
             <mat-form-field class="form-input">
                 <mat-label>Title:</mat-label>
                 <input matInput type="text" formControlName="title">
-              <mat-error *ngIf="form.get('title')?.errors?.['required']">Field cannnot be empty</mat-error>
+              <mat-error *ngIf="titleValue?.errors?.['required']">Field cannot be empty</mat-error>
             </mat-form-field>
 
             <mat-form-field class="form-input">
                 <mat-label>News:</mat-label>
                 <input matInput type="text" formControlName="news">
-              <mat-error *ngIf="form.get('news')?.errors?.['required']">Field can't be empty</mat-error>
-              <mat-error *ngIf="form.get('news')?.errors?.['minlength']">Length must be at least 10
+              <mat-error *ngIf="newsValue?.errors?.['required']">Field can't be empty</mat-error>
+              <mat-error *ngIf="newsValue?.errors?.['minlength']">Length must be at least 10
                 characters</mat-error>
             </mat-form-field>
-
-
 
             <mat-form-field class="form-input">
                 <mat-label>Img Url:</mat-label>
                 <input matInput formControlName="imgUrl" class=" img-block">
-                <img mat-card-image *ngIf="imgUrl.value" class="preview" [src]="imgPreviw" width="30" height="30">
-                    <mat-error *ngIf="form.get('imgUrl')?.errors?.['required']">Add Image</mat-error>
+                <img mat-card-image *ngIf="imgUrl.value" class="preview" [src]="imgPreviw" width="30" height="30" alt="img">
+                    <mat-error *ngIf="imgUrlValue?.errors?.['required']">Add Image</mat-error>
             </mat-form-field>
             <mat-divider></mat-divider>
 
