--- a/src/app/authorization/authorization.component.html
+++ b/src/app/authorization/authorization.component.html
@@ -6,29 +6,23 @@
             <mat-form-field class="form-input">
                 <mat-label>Username:</mat-label>
                 <input matInput type="text" formControlName="username">
+              <mat-error *ngIf="userValue?.errors?.['required']">Field cannnot be empty</mat-error>
             </mat-form-field>
-            <div class="valiadation"
-                *ngIf="userForm.get('username')?.invalid && (userForm.get('username')?.dirty || userForm.get('username')?.touched )">
-                <mat-error *ngIf="userForm.get('username')?.errors?.['required']">Field cannnot be empty</mat-error>
-            </div>
 
             <mat-form-field class="form-input">
                 <mat-label>Password:</mat-label>
                 <input matInput type="password" formControlName="password">
+              <mat-error *ngIf="passwordValue?.errors?.['required']">Field can't be empty</mat-error>
             </mat-form-field>
-            <div class="valiadation"
-                *ngIf="userForm.get('password')?.invalid && (userForm.get('password')?.dirty || userForm.get('password')?.touched )"
-                class="valiadation">
-                <mat-error *ngIf="userForm.get('password')?.errors?.['required']">Field can't be empty</mat-error>
-            </div>
 
-            <button mat-raised-button class="btn-form" [disabled]="userForm.invalid" type="button" (click)="entrance()">
+            <button mat-raised-button class="btn-form" [disabled]="userForm.invalid || userForm.disabled" type="button" (click)="login()">
                 Sign In
             </button>
             <hr>
             <button mat-raised-button class="btn-form" type="button" (click)="registration()">
                 Create a new account
             </button>
+          <mat-error *ngIf="notFound">User not found. You need to register.</mat-error>
         </form>
     </mat-card-content>
 </mat-card>
