--- a/src/app/regisrtation/regisrtation.component.html
+++ b/src/app/regisrtation/regisrtation.component.html
@@ -6,38 +6,29 @@
             <mat-form-field class="form-input">
                 <mat-label>Username:</mat-label>
                 <input matInput type="text" formControlName="username">
+              <mat-error *ngIf=" userValue?.invalid">Field cannot be empty</mat-error>
             </mat-form-field>
-            <div class="valiadation"
-                *ngIf="userForm.get('username')?.invalid && (userForm.get('username')?.dirty || userForm.get('username')?.touched )">
-                <mat-error *ngIf="userForm.get('username')?.errors?.['required']">Field cannnot be empty</mat-error>
-            </div>
 
             <mat-form-field class="form-input">
                 <mat-label>Password:</mat-label>
                 <input matInput type="password" formControlName="password">
+              <mat-error *ngIf="passwordValue?.errors?.['required']">Field can't be empty</mat-error>
+              <mat-error *ngIf="passwordValue?.errors?.['minlength']">Length must be at least 10
+                characters. You have {{passwordValue?.value.length}} characters.</mat-error>
+              <mat-error *ngIf="compareValidator">Passwords do not match</mat-error>
             </mat-form-field>
-            <div class="valiadation"
-                *ngIf="userForm.get('password')?.invalid && (userForm.get('password')?.dirty || userForm.get('password')?.touched )"
-                class="valiadation">
-                <mat-error *ngIf="userForm.get('password')?.errors?.['required']">Field can't be empty</mat-error>
-                <mat-error *ngIf="userForm.get('password')?.errors?.['minlength']">Length must be at least 10
-                    characters</mat-error>
-            </div>
 
             <mat-form-field class="form-input">
                 <mat-label>Confirm Password:</mat-label>
                 <input matInput type="password" formControlName="confirmPassword">
+              <mat-error *ngIf="confirmPasswordValue?.errors?.['required']">Field can't be
+                empty</mat-error>
+              <mat-error *ngIf="confirmPasswordValue?.errors?.['minlength']">Length must be at least 10
+                characters</mat-error>
+              <mat-error *ngIf="!passwordValue?.errors?.['minlength'] && compareValidator">Passwords do not match</mat-error>
             </mat-form-field>
-            <div class="valiadation"
-                *ngIf="userForm.get('confirmPassword')?.invalid && (userForm.get('confirmPassword')?.dirty || userForm.get('password')?.touched )"
-                class="valiadation">
-                <mat-error *ngIf="userForm.get('confirmPassword')?.errors?.['required']">Field can't be
-                    empty</mat-error>
-                <mat-error *ngIf="userForm.get('confirmPassword')?.errors?.['minlength']">Length must be at least 10
-                    characters</mat-error>
-            </div>
 
-            <button mat-raised-button class="btn-form" [disabled]="userForm.invalid" type="button" (click)="newUser()">
+            <button mat-raised-button class="btn-form" [disabled]="userForm.invalid" type="button" (click)="createUser()">
                 Registration
             </button>
             <hr>
