--- a/src/app/admin/components/new-news/new-news.component.html
+++ b/src/app/admin/components/new-news/new-news.component.html
@@ -1,5 +1,9 @@
 <h2 class="title">New News</h2>
 
+<button mat-raised-button class="btn" color="warn" (click)="goToNews()">
+  Go to news
+</button>
+
 <mat-card class="container">
     <mat-card-title class="title-group">{{btnName}}</mat-card-title>
     <mat-card-content>
