--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -1,8 +1,8 @@
 <h2 class="title">News</h2>
 
-<button mat-raised-button class="btn" color="primary" (click)="goToAddNews()">
-    Add news
-</button>
+<!--<button mat-raised-button class="btn" color="primary" (click)="goToAddNews()">-->
+<!--    Add news-->
+<!--</button>-->
 
 <app-newsitem [item]="item" *ngFor="let item of newsList$ | async" (editClick)="onEditNews(item)"></app-newsitem>
 
