--- a/src/app/admin/components/new-news/new-news.component.html
+++ b/src/app/admin/components/new-news/new-news.component.html
@@ -1,4 +1,4 @@
-<h2 class="title">New News</h2>
+<h2 class="title mt-3">New News</h2>
 
 <button mat-raised-button class="btn" color="warn" (click)="goToNews()">
   Go to news
