--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,6 @@
-<h2 class="title">Home</h2>
+<h2 class="title mt-3">Home</h2>
 
 <div class="card">
-    <div class="card-body">
       <p class="welcome" *ngIf="userTitle !== undefined">Welcome, {{userTitle}}</p>
       <p>{{ new | date }}</p>
-    </div>
 </div>
