--- a/src/app/user-layout/user-layout.component.html
+++ b/src/app/user-layout/user-layout.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="nav mat-display-2" routerLinkActive="active">
-    <a class="title" routerLink="/">{{title}}</a>
+    <a class="title" routerLink="/">{{title | uppercase}}</a>
 
   <mat-nav-list class="nav">
     <a mat-list-item class="page" routerLinkActive="active" routerLink="/home">
