--- a/src/app/admin/admin-layout/admin-layout.component.scss
+++ b/src/app/admin/admin-layout/admin-layout.component.scss
@@ -1,5 +1,6 @@
 .nav {
-  padding: 3rem 1rem;
+  padding: 0 1rem;
+  height: 5rem;
   justify-content: space-between;
 }
 
@@ -13,6 +14,7 @@
 .page {
   color: #fff;
   width: fit-content;
+  padding: 2.5rem 1rem;
 }
 
 .nav {
