--- a/src/app/components/authorization/authorization.component.html
+++ b/src/app/components/authorization/authorization.component.html
@@ -1,4 +1,4 @@
-<h2 class="title">Authorization</h2>
+<h2 class="title mt-3">Authorization</h2>
 
 <mat-card class="container">
     <mat-card-content>
