--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -1,4 +1,4 @@
-<h2 class="title">News</h2>
+<h2 class="title mt-3">News</h2>
 
 <!--<button mat-raised-button class="btn" color="primary" (click)="goToAddNews()">-->
 <!--    Add news-->
