--- a/src/app/admin/components/pages/pages.component.html
+++ b/src/app/admin/components/pages/pages.component.html
@@ -41,4 +41,6 @@
   >
     Admin cannot be edited or deleted!
   </p>
+
+  <p class="text-danger" *ngIf="notAdmin">Admin cannot be edited or deleted!</p>
 </div>
