added fixes and table

--- a/src/app/admin/admin-layout/admin-layout.component.html
+++ b/src/app/admin/admin-layout/admin-layout.component.html
@@ -3,7 +3,7 @@
 
   <mat-nav-list class="nav">
     <a mat-list-item class="page" routerLinkActive="active" routerLink="/admin/new-news">New News</a>
-    <a mat-list-item class="page" routerLinkActive="active" routerLink="/admin/pages">Pages</a>
+    <a mat-list-item class="page" routerLinkActive="active" routerLink="/admin/pages">Users</a>
     <a mat-list-item class="page" href="#" (click)="logout($event)">
       <mat-icon>logout</mat-icon>
     </a>
