--- a/src/app/admin/components/pages/pages.component.html
+++ b/src/app/admin/components/pages/pages.component.html
@@ -4,21 +4,31 @@
   <table class="table table-hover table-striped table-bordered border-danger">
     <thead>
     <tr>
-      <th scope="col">#</th>
       <th scope="col">ID</th>
       <th scope="col">USER</th>
       <th scope="col">PASSWORD</th>
       <th scope="col">ROLE</th>
+      <th scope="col"></th>
     </tr>
     </thead>
     <tbody>
     <tr *ngFor="let user of userList$ | async">
-      <th scope="row"></th>
-      <td>{{user.id}}</td>
+      <th scope="row">{{user.id}}</th>
       <td>{{user.username}}</td>
       <td>{{user.password}}</td>
       <td>{{user.role}}</td>
+      <td class="edit">
+        <button mat-button (click)="onDeleteUser(user)">
+          <mat-icon>delete</mat-icon>
+        </button>
+        <button mat-button (click)="onEditUser(user)">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
     </tr>
     </tbody>
   </table>
+
+  <p class="text-danger" *ngIf="notAdmin">Admin cannot be edited or deleted!</p>
 </div>
+
