--- a/src/app/admin/admin-layout/admin-layout.component.html
+++ b/src/app/admin/admin-layout/admin-layout.component.html
@@ -1,9 +1,21 @@
 <mat-toolbar color="warn" class="nav mat-display-2" routerLinkActive="active">
-  <a class="title" routerLink="/">{{title | uppercase}}</a>
+  <a class="title" routerLink="/">{{ title | uppercase }}</a>
 
   <mat-nav-list class="nav">
-    <a mat-list-item class="page" routerLinkActive="active" routerLink="/admin/new-news">New News</a>
-    <a mat-list-item class="page" routerLinkActive="active" routerLink="/admin/pages">Users</a>
+    <a
+      mat-list-item
+      class="page"
+      routerLinkActive="active"
+      routerLink="/admin/new-news"
+      >New News</a
+    >
+    <a
+      mat-list-item
+      class="page"
+      routerLinkActive="active"
+      routerLink="/admin/pages"
+      >Users</a
+    >
     <a mat-list-item class="page" href="#" (click)="logout($event)">
       <mat-icon>logout</mat-icon>
     </a>
