--- a/src/app/admin/components/deleting-user/deleting-user.component.html
+++ b/src/app/admin/components/deleting-user/deleting-user.component.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title>Delete user</h1>
-<div mat-dialog-content>
-  Would you like to delete this user?
-</div>
+<div mat-dialog-content>Would you like to delete this user?</div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close (click)="onCancelClick()">No</button>
-  <button mat-button mat-dialog-close cdkFocusInitial (click)="onDeleteClick()">Ok</button>
+  <button mat-button mat-dialog-close cdkFocusInitial (click)="onDeleteClick()">
+    Ok
+  </button>
 </div>
