--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -1,9 +1,2 @@
-.title {
-    text-align: center;
-}
-
-.btn {
-    color: #fff;
-    padding: 1rem 2rem;
-    background-color: #1ff011;
-}
+.title { text-align: center; } .btn { color: #fff; padding: 1rem 2rem;
+background-color: #1ff011; }
