--- a/src/app/admin/components/new-news/new-news.component.scss
+++ b/src/app/admin/components/new-news/new-news.component.scss
@@ -1,78 +1,11 @@
-$bg-color: #ccc;
-
-.title {
-    text-align: center;
-}
-
-.container {
-    text-align: center;
-    min-width: 50%;
-    max-width: 30rem;
-    margin: 0 auto;
-}
-
-.btn {
-  position: relative;
-  left: 50%;
-  transform: translate(-50%, 0);
-  margin-bottom: 1rem;
-}
-
-.form-input {
-    width: 100%;
-}
-
-.title-group {
-    margin: 1rem;
-    font-size: 2rem;
-    font-weight: bold;
-}
-
-.form-control {
-    text-align: end;
-}
-
-.lable {
-    font-size: 1.3rem;
-    margin-right: 2rem;
-    font-weight: bold;
-    width: 30%;
-    text-align: left;
-}
-
-.title-form {
-    width: 100%;
-    height: 2rem;
-}
-
-.news-form {
-    width: 100%;
-    height: 10rem;
-}
-
-.valid {
-    &.ng-invalid.ng-touched {
-        border: 2px solid #f00;
-    }
-
-    &.ng-valid.ng-touched {
-        border: 2px solid #004dff;
-    }
-}
-
-.btn-form {
-    margin: 0.5rem 1rem;
-}
-
-.valiadation {
-    color: #f00;
-    font-size: 0.8rem;
-}
-
-.img-block {
-    width: 85%;
-}
-
-.preview {
-    margin-left: 1.5rem;
-}
+$bg-color: #ccc; .title { text-align: center; } .container { text-align: center;
+min-width: 50%; max-width: 30rem; margin: 0 auto; } .btn { position: relative;
+left: 50%; transform: translate(-50%, 0); margin-bottom: 1rem; } .form-input {
+width: 100%; } .title-group { margin: 1rem; font-size: 2rem; font-weight: bold;
+} .form-control { text-align: end; } .lable { font-size: 1.3rem; margin-right:
+2rem; font-weight: bold; width: 30%; text-align: left; } .title-form { width:
+100%; height: 2rem; } .news-form { width: 100%; height: 10rem; } .valid {
+&.ng-invalid.ng-touched { border: 2px solid #f00; } &.ng-valid.ng-touched {
+border: 2px solid #004dff; } } .btn-form { margin: 0.5rem 1rem; } .valiadation {
+color: #f00; font-size: 0.8rem; } .img-block { width: 85%; } .preview {
+margin-left: 1.5rem; }
