--- a/src/app/admin/components/pages/pages.component.scss
+++ b/src/app/admin/components/pages/pages.component.scss
@@ -1,11 +1,2 @@
-.title {
-    text-align: center;
-}
-
-.table-wrapper {
-  margin: 0 2rem;
-}
-
-.edit {
-  width: 10rem;
-}
+.title { text-align: center; } .table-wrapper { margin: 0 2rem; } .edit { width:
+10rem; }
