--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,13 +1,2 @@
-.title {
-    text-align: center;
-}
-
-.card {
-    margin-top: 3rem;
-    text-align: center;
-}
-
-.welcome {
-  margin-left: 1rem;
-  font-size: 1rem;
-}
+.title { text-align: center; } .card { margin-top: 3rem; text-align: center; }
+.welcome { margin-left: 1rem; font-size: 1rem; }
