--- a/src/app/components/news/news.component.scss
+++ b/src/app/components/news/news.component.scss
@@ -1,2 +1,8 @@
-.title { text-align: center; } .btn { position: relative; left: 50%; transform:
-translate(-50%, 0); }
+.title {
+  text-align: center;
+}
+.btn {
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
