--- a/src/app/user-layout/user-layout.component.html
+++ b/src/app/user-layout/user-layout.component.html
@@ -14,7 +14,7 @@
     <a mat-list-item class="page" routerLinkActive="active" routerLink="/news"
       >News</a
     >
-    <a mat-list-item class="page" href="#" (click)="logout($event)">
+    <a mat-list-item class="page" href="#" (click)="logout()">
       <mat-icon>logout</mat-icon>
     </a>
   </mat-nav-list>
