--- a/src/app/admin/components/list-of-users/list-of-users.component.scss
+++ b/src/app/admin/components/list-of-users/list-of-users.component.scss
@@ -1,2 +1,9 @@
-table { width: 100%; } .title { text-align: center; } .table-wrapper { margin: 0
-2rem; }
+table {
+  width: 100%;
+}
+.title {
+  text-align: center;
+}
+.table-wrapper {
+  margin: 0 2rem;
+}
