--- a/src/app/user-layout/user-layout.component.scss
+++ b/src/app/user-layout/user-layout.component.scss
@@ -1,6 +1,37 @@
-.nav { padding: 0 1rem; height: 5rem; justify-content: space-between; } .title {
-font-size: 2rem; font-weight: bold; text-decoration-line: none; color: #fff; }
-.page { color: #fff; width: fit-content; padding: 2.5rem 1rem; } .nav { display:
-flex; flex-direction: row; list-style-type: none; } mat-sidenav-container {
-height: 100%; } mat-grid-tile { background-color: lightblue; } mat-sidenav {
-background-color: rgb(84, 117, 224); width: 20rem; }
+.nav {
+  padding: 0 1rem;
+  height: 5rem;
+  justify-content: space-between;
+}
+
+.title {
+  font-size: 2rem;
+  font-weight: bold;
+  text-decoration-line: none;
+  color: #fff;
+}
+
+.page {
+  color: #fff;
+  width: fit-content;
+  padding: 2.5rem 1rem;
+}
+
+.nav {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+}
+
+mat-sidenav-container {
+  height: 100%;
+}
+
+mat-grid-tile {
+  background-color: lightblue;
+}
+
+mat-sidenav {
+  background-color: rgb(84, 117, 224);
+  width: 20rem;
+}
