--- a/src/app/admin/components/new-news/new-news.component.html
+++ b/src/app/admin/components/new-news/new-news.component.html
@@ -1,6 +1,11 @@
 <h2 class="title mt-3">New News</h2>
 
-<button mat-raised-button class="btn" color="warn" (click)="goToNews()">
+<button
+  mat-raised-button
+  class="btn"
+  color="warn"
+  (click)="goToNews()"
+>
   Go to news
 </button>
 
@@ -10,26 +15,32 @@
     <form [formGroup]="form">
       <mat-form-field class="form-input">
         <mat-label>Title:</mat-label>
-        <input matInput type="text" formControlName="title" />
-        <mat-error *ngIf="titleValue?.errors?.['required']"
-          >Field cannot be empty</mat-error
-        >
+        <input
+          matInput
+          type="text"
+          formControlName="title"
+        />
+        <mat-error *ngIf="titleValue?.errors?.['required']">Field cannot be empty</mat-error>
       </mat-form-field>
 
       <mat-form-field class="form-input">
         <mat-label>News:</mat-label>
-        <input matInput type="text" formControlName="news" />
-        <mat-error *ngIf="newsValue?.errors?.['required']"
-          >Field can't be empty</mat-error
-        >
-        <mat-error *ngIf="newsValue?.errors?.['minlength']"
-          >Length must be at least 10 characters</mat-error
-        >
+        <input
+          matInput
+          type="text"
+          formControlName="news"
+        />
+        <mat-error *ngIf="newsValue?.errors?.['required']">Field can't be empty</mat-error>
+        <mat-error *ngIf="newsValue?.errors?.['minlength']">Length must be at least 10 characters</mat-error>
       </mat-form-field>
 
       <mat-form-field class="form-input">
         <mat-label>Img Url:</mat-label>
-        <input matInput formControlName="imgUrl" class="img-block" />
+        <input
+          matInput
+          formControlName="imgUrl"
+          class="img-block"
+        />
         <img
           mat-card-image
           *ngIf="imgUrl.value"
@@ -37,10 +48,9 @@
           [src]="imgPreviw"
           width="30"
           height="30"
-          alt="img" />
-        <mat-error *ngIf="imgUrlValue?.errors?.['required']"
-          >Add Image</mat-error
-        >
+          alt="img"
+        />
+        <mat-error *ngIf="imgUrlValue?.errors?.['required']">Add Image</mat-error>
       </mat-form-field>
       <mat-divider></mat-divider>
 
@@ -49,10 +59,17 @@
         class="btn-form"
         [disabled]="form.invalid"
         type="button"
-        (click)="addNews()">
+        (click)="addNews()"
+      >
         {{ btnName }}
       </button>
-      <button mat-raised-button class="btn-form" type="reset">Clear</button>
+      <button
+        mat-raised-button
+        class="btn-form"
+        type="reset"
+      >
+        Clear
+      </button>
     </form>
   </mat-card-content>
 </mat-card>
