--- a/src/app/admin/admin-layout/admin-layout.component.html
+++ b/src/app/admin/admin-layout/admin-layout.component.html
@@ -1,5 +1,13 @@
-<mat-toolbar color="warn" class="nav mat-display-2" routerLinkActive="active">
-  <a class="title" routerLink="/">{{ title | uppercase }}</a>
+<mat-toolbar
+  color="warn"
+  class="nav mat-display-2"
+  routerLinkActive="active"
+>
+  <a
+    class="title"
+    routerLink="/"
+    >{{ title | uppercase }}</a
+  >
 
   <mat-nav-list class="nav">
     <a
@@ -16,7 +24,12 @@
       routerLink="/admin/pages"
       >Users</a
     >
-    <a mat-list-item class="page" href="#" (click)="logout($event)">
+    <a
+      mat-list-item
+      class="page"
+      href="#"
+      (click)="logout($event)"
+    >
       <mat-icon>logout</mat-icon>
     </a>
   </mat-nav-list>
