--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,10 @@
 <h2 class="title mt-3">Home</h2>
 
 <div class="card">
-  <p class="welcome" *ngIf="userTitle !== undefined">
+  <p
+    class="welcome"
+    *ngIf="userTitle !== undefined"
+  >
     Welcome, {{ userTitle }}
   </p>
   <p>{{ new | date }}</p>
