--- a/src/app/components/newsitem/newsitem.component.html
+++ b/src/app/components/newsitem/newsitem.component.html
@@ -1,12 +1,16 @@
 <mat-card class="news-item">
   <div class="content-wrap">
-    <mat-card-content ng-controller="myAppCtrl" class="img-wrapper">
+    <mat-card-content
+      ng-controller="myAppCtrl"
+      class="img-wrapper"
+    >
       <img
         mat-card-image
         *ngIf="item.imgUrl"
         class="imageNews"
         src="{{ item.imgUrl }}"
-        alt="img" />
+        alt="img"
+      />
     </mat-card-content>
     <div class="info-wrapper">
       <mat-card-header>
@@ -17,7 +21,11 @@
         <div [title]="item.full">{{ news }}</div>
       </mat-card-content>
       <mat-card-actions>
-        <button *ngIf="unnecessaryBtn()" mat-button (click)="toggleFull()">
+        <button
+          *ngIf="unnecessaryBtn()"
+          mat-button
+          (click)="toggleFull()"
+        >
           <a class="news-link">{{ btnName }}</a>
         </button>
       </mat-card-actions>
@@ -25,7 +33,15 @@
   </div>
 
   <div class="button-wrapper">
-    <mat-icon class="btn-hide" (click)="deleteNews(item)">delete</mat-icon>
-    <mat-icon class="btn-hide" (click)="onEditNews(item)">edit</mat-icon>
+    <mat-icon
+      class="btn-hide"
+      (click)="deleteNews(item)"
+      >delete</mat-icon
+    >
+    <mat-icon
+      class="btn-hide"
+      (click)="onEditNews(item)"
+      >edit</mat-icon
+    >
   </div>
 </mat-card>
