--- a/src/app/components/regisrtation/regisrtation.component.html
+++ b/src/app/components/regisrtation/regisrtation.component.html
@@ -5,36 +5,38 @@
     <form [formGroup]="userForm">
       <mat-form-field class="form-input">
         <mat-label>Username:</mat-label>
-        <input matInput type="text" formControlName="username" />
+        <input
+          matInput
+          type="text"
+          formControlName="username"
+        />
         <mat-error *ngIf="userValue?.invalid">Field cannot be empty</mat-error>
       </mat-form-field>
 
       <mat-form-field class="form-input">
         <mat-label>Password:</mat-label>
-        <input matInput type="password" formControlName="password" />
-        <mat-error *ngIf="passwordValue?.errors?.['required']"
-          >Field can't be empty</mat-error
-        >
+        <input
+          matInput
+          type="password"
+          formControlName="password"
+        />
+        <mat-error *ngIf="passwordValue?.errors?.['required']">Field can't be empty</mat-error>
         <mat-error *ngIf="passwordValue?.errors?.['minlength']"
-          >Length must be at least 10 characters. You have
-          {{ passwordValue?.value.length }} characters.</mat-error
-        >
+          >Length must be at least 10 characters. You have {{ passwordValue?.value.length }} characters.
+        </mat-error>
         <mat-error *ngIf="compareValidator">Passwords do not match</mat-error>
       </mat-form-field>
 
       <mat-form-field class="form-input">
         <mat-label>Confirm Password:</mat-label>
-        <input matInput type="password" formControlName="confirmPassword" />
-        <mat-error *ngIf="confirmPasswordValue?.errors?.['required']"
-          >Field can't be empty</mat-error
-        >
-        <mat-error *ngIf="confirmPasswordValue?.errors?.['minlength']"
-          >Length must be at least 10 characters</mat-error
-        >
-        <mat-error
-          *ngIf="!passwordValue?.errors?.['minlength'] && compareValidator"
-          >Passwords do not match</mat-error
-        >
+        <input
+          matInput
+          type="password"
+          formControlName="confirmPassword"
+        />
+        <mat-error *ngIf="confirmPasswordValue?.errors?.['required']">Field can't be empty</mat-error>
+        <mat-error *ngIf="confirmPasswordValue?.errors?.['minlength']">Length must be at least 10 characters</mat-error>
+        <mat-error *ngIf="!passwordValue?.errors?.['minlength'] && compareValidator">Passwords do not match</mat-error>
       </mat-form-field>
 
       <button
@@ -42,7 +44,8 @@
         class="btn-form"
         [disabled]="userForm.invalid"
         type="button"
-        (click)="createUser()">
+        (click)="createUser()"
+      >
         Registration
       </button>
       <hr />
@@ -50,7 +53,8 @@
         mat-raised-button
         class="btn-form"
         type="button"
-        (click)="close()">
+        (click)="close()"
+      >
         Close
       </button>
     </form>
