--- a/src/app/main-layout/main-layout.component.html
+++ b/src/app/main-layout/main-layout.component.html
@@ -1,15 +1,21 @@
 <mat-toolbar
   color="primary"
   class="nav mat-display-2"
-  routerLinkActive="active">
-  <a class="title" routerLink="/">{{ title | uppercase }}</a>
+  routerLinkActive="active"
+>
+  <a
+    class="title"
+    routerLink="/"
+    >{{ title | uppercase }}</a
+  >
 
   <mat-nav-list class="nav">
     <a
       mat-list-item
       class="page"
       routerLinkActive="active"
-      routerLink="/authorization">
+      routerLink="/authorization"
+    >
       <mat-icon>account_circle</mat-icon>
     </a>
   </mat-nav-list>
