--- a/src/app/user-layout/user-layout.component.html
+++ b/src/app/user-layout/user-layout.component.html
@@ -1,20 +1,43 @@
 <mat-toolbar
   color="primary"
   class="nav mat-display-2"
-  routerLinkActive="active">
-  <a class="title" routerLink="/">{{ title | uppercase }}</a>
+  routerLinkActive="active"
+>
+  <a
+    class="title"
+    routerLink="/"
+    >{{ title | uppercase }}</a
+  >
 
   <mat-nav-list class="nav">
-    <a mat-list-item class="page" routerLinkActive="active" routerLink="/home">
+    <a
+      mat-list-item
+      class="page"
+      routerLinkActive="active"
+      routerLink="/home"
+    >
       <mat-icon>home</mat-icon>
     </a>
-    <a mat-list-item class="page" routerLinkActive="active" routerLink="/about"
+    <a
+      mat-list-item
+      class="page"
+      routerLinkActive="active"
+      routerLink="/about"
       >About us</a
     >
-    <a mat-list-item class="page" routerLinkActive="active" routerLink="/news"
+    <a
+      mat-list-item
+      class="page"
+      routerLinkActive="active"
+      routerLink="/news"
       >News</a
     >
-    <a mat-list-item class="page" href="#" (click)="logout($event)">
+    <a
+      mat-list-item
+      class="page"
+      href="#"
+      (click)="logout($event)"
+    >
       <mat-icon>logout</mat-icon>
     </a>
   </mat-nav-list>
